--- a/lib32/lib32-libusb/PKGBUILD
+++ b/lib32/lib32-libusb/PKGBUILD
@@ -4,7 +4,7 @@
 
 _name=libusb
 pkgname=lib32-libusb
-pkgver=1.0.28
+pkgver=1.0.29
 pkgrel=1
 pkgdesc="A cross-platform user library to access USB devices (32-bit)"
 arch=(x86_64)
@@ -16,14 +16,16 @@ depends=(
   lib32-elogind
   libusb=$pkgver
 )
-makedepends=(gcc-multilib)
+makedepends=(
+  git
+)
 provides=(libusb-1.0.so)
-source=($_url/releases/download/v$pkgver/$_name-$pkgver.tar.bz2)
-sha512sums=('0f4efa6b54e6195d2e5446652c2dc07358583e205d63bf438c4409511b8637d1700a71268c40499755747827d23cc730d9122267386f847bf781993c045c519f')
-b2sums=('9bf506455fc1b981de155600936ab229f089ea28e58491076eab632455c4e814bf0336cd9326056a255508aa3956643c503af3ff2feda80bac036cf5cad86e80')
+source=(git+$_url.git#tag=v$pkgver)
+sha512sums=('1f30c7f4b57352db7c4e786043a431bb52a9faab3fc3fa17d7112d5671da8cc894ec1b8e117185081ea2faad28177d8db4b5fde053327bdadea327e099669cc5')
+b2sums=('759be08ecf6d7e3c60427223dda4667538b7de32fe3fe6769b53c46859fec31f678967828fe278253a03677cf9c49a672b08ef39a525875c03ec04c0e1086015')
 
 prepare() {
-  cd $_name-$pkgver
+  cd $_name
   autoreconf -fiv
 }
 
@@ -37,7 +39,7 @@ build() {
   export CC="gcc -m32"
   export PKG_CONFIG_PATH="/usr/lib32/pkgconfig"
 
-  cd $_name-$pkgver
+  cd $_name
   ./configure "${configure_options[@]}"
   # prevent excessive overlinking due to libtool
   sed -i -e 's/ -shared / -Wl,-O1,--as-needed\0/g' libtool
@@ -45,7 +47,7 @@ build() {
 }
 
 package () {
-  make DESTDIR="$pkgdir" install -C $_name-$pkgver
+  make DESTDIR="$pkgdir" install -C $_name
   rm -rf "$pkgdir"/usr/include
-  install -vDm 644 $_name-$pkgver/{AUTHORS,ChangeLog,NEWS,README,TODO} -t "$pkgdir/usr/share/doc/$pkgname/"
+  install -vDm 644 $_name/{AUTHORS,ChangeLog,NEWS,README,TODO} -t "$pkgdir/usr/share/doc/$pkgname/"
 }
