--- a/system/audit/.artixlinux/pkgbase.yaml
+++ b/system/audit/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: audit
-  version: 4.0.3-1
-  arch:
-    - x86_64
-  pkgname:
-    - audit
-    - python-audit
 actions:
   addRepo: system
   removeRepo: system-gremlins
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
-    version: 4.0.3-1
+    version: 4.0.5-1
     packages:
-      - audit-4.0.3-1-x86_64.pkg.tar.zst
-      - python-audit-4.0.3-1-x86_64.pkg.tar.zst
+      - audit-4.0.5-1-x86_64.pkg.tar.zst
+      - python-audit-4.0.5-1-x86_64.pkg.tar.zst
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: system
