--- a/galaxy/libtg_owt/.artixlinux/pkgbase.yaml
+++ b/galaxy/libtg_owt/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: galaxy
-  removeRepo: galaxy-goblins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -53,8 +53,8 @@ repos:
     packages: []
     debug: []
   galaxy:
-    version: 0.git29.c4192e8-2
+    version: 0.git30.62321fd-1
     packages:
-      - libtg_owt-0.git29.c4192e8-2-x86_64.pkg.tar.zst
+      - libtg_owt-0.git30.62321fd-1-x86_64.pkg.tar.zst
     debug: []
 team: galaxy
