--- a/galaxy/telegram-desktop/.artixlinux/pkgbase.yaml
+++ b/galaxy/telegram-desktop/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: galaxy
-  removeRepo: galaxy-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -53,8 +53,8 @@ repos:
     packages: []
     debug: []
   galaxy:
-    version: 5.14.3-3
+    version: 5.15.0-1
     packages:
-      - telegram-desktop-5.14.3-3-x86_64.pkg.tar.zst
+      - telegram-desktop-5.15.0-1-x86_64.pkg.tar.zst
     debug: []
 team: galaxy
