--- a/world/libcryptui/.artixlinux/pkgbase.yaml
+++ b/world/libcryptui/.artixlinux/pkgbase.yaml
@@ -1,54 +1,62 @@
 ---
-pkgbase:
-  name: libcryptui
-  version: 1:3.12.2+r71+ged4f890e-1
-  arch:
-    - x86_64
-  pkgname:
-    - libcryptui
 actions:
-  addRepo: null
+  addRepo: world-gremlins
   removeRepo: null
-  triggersBuild: false
+  triggersBuild: true
   triggersRebuild: false
-  triggersRepoAdd: false
+  triggersRepoAdd: true
   triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
-    version: null
-    packages: []
+    version: 1:3.12.2+r71+ged4f890e-1
+    packages:
+      - libcryptui-1:3.12.2+r71+ged4f890e-1-x86_64.pkg.tar.zst
+    debug:
+      - libcryptui-debug-1:3.12.2+r71+ged4f890e-1-x86_64.pkg.tar.zst
   world:
     version: 1:3.12.2+r71+ged4f890e-1
     packages:
       - libcryptui-1:3.12.2+r71+ged4f890e-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
+team: world
