--- a/world/libcryptui/PKGBUILD
+++ b/world/libcryptui/PKGBUILD
@@ -9,7 +9,7 @@ pkgdesc="Library for OpenPGP prompts"
 url="https://gitlab.gnome.org/GNOME/libcryptui"
 arch=(x86_64)
 license=(GPL)
-depends=(gtk3 gpgme dbus-glib libnotify gcr dconf libsm)
+depends=(gtk3 gpgme dbus-glib libnotify gcr dconf libsm gcc14)
 makedepends=(intltool gobject-introspection gnome-common git)
 provides=(libcryptui.so)
 options=(debug)
