--- a/world/mariadb/.artixlinux/pkgbase.yaml
+++ b/world/mariadb/.artixlinux/pkgbase.yaml
@@ -1,14 +1,4 @@
 ---
-pkgbase:
-  name: mariadb
-  version: 11.7.2-3
-  arch:
-    - x86_64
-  pkgname:
-    - mariadb-libs
-    - mariadb-clients
-    - mariadb
-    - mytop
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -21,41 +11,53 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 11.7.2-3
+    version: 11.8.2-1
     packages:
-      - mariadb-libs-11.7.2-3-x86_64.pkg.tar.zst
-      - mariadb-clients-11.7.2-3-x86_64.pkg.tar.zst
-      - mariadb-11.7.2-3-x86_64.pkg.tar.zst
-      - mytop-11.7.2-3-x86_64.pkg.tar.zst
+      - mariadb-libs-11.8.2-1-x86_64.pkg.tar.zst
+      - mariadb-clients-11.8.2-1-x86_64.pkg.tar.zst
+      - mariadb-11.8.2-1-x86_64.pkg.tar.zst
+      - mytop-11.8.2-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
