--- a/world/ncdu/.artixlinux/pkgbase.yaml
+++ b/world/ncdu/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: ncdu
-  version: 2.7-1
-  arch:
-    - x86_64
-  pkgname:
-    - ncdu
 actions:
   addRepo: world
   removeRepo: null
@@ -18,38 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
-    version: null
-    packages: []
-  world:
-    version: 2.7-1
+    version: 2.8.2-1
     packages:
-      - ncdu-2.7-1-x86_64.pkg.tar.zst
+      - ncdu-2.8.2-1-x86_64.pkg.tar.zst
+    debug: []
+  world:
+    version: 2.8.2-2
+    packages:
+      - ncdu-2.8.2-2-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
