--- a/world/volume_key/.artixlinux/pkgbase.yaml
+++ b/world/volume_key/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: volume_key
-  version: 0.3.12-10
-  arch:
-    - x86_64
-  pkgname:
-    - volume_key
-    - python-volume_key
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 0.3.12-10
+    version: 0.3.12-11
     packages:
-      - volume_key-0.3.12-10-x86_64.pkg.tar.zst
-      - python-volume_key-0.3.12-10-x86_64.pkg.tar.zst
+      - volume_key-0.3.12-11-x86_64.pkg.tar.zst
+      - python-volume_key-0.3.12-11-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
