--- a/galaxy/libreoffice-fresh/.artixlinux/srcinfo.yaml
+++ b/galaxy/libreoffice-fresh/.artixlinux/srcinfo.yaml
@@ -1,9 +1,9 @@
 ---
-version: 25.2.3-3
+version: 25.2.3-4
 pkgbase:
   name: libreoffice-fresh
   pkgver: 25.2.3
-  pkgrel: 3
+  pkgrel: 4
   url: https://www.libreoffice.org/
   arch:
     - x86_64
@@ -110,6 +110,7 @@ pkgbase:
     - python-setuptools
     - rhino
     - argon2
+    - gpgmepp
   noextract:
     - a7983f859eafb2677d7ff386a023bc40-xsltml_2.1.2.zip
     - 0168229624cfac409e766913506961a8-ucpp-1.3.2.tar.gz
@@ -323,4 +324,4 @@ pkgname:
       - etc/libreoffice/psprint.conf
       - etc/profile.d/libreoffice-fresh.sh
       - etc/profile.d/libreoffice-fresh.csh
-# generated with artixpkg 0.36.1-1-any
+# generated with artixpkg 0.36.3-1-any
