--- a/system/leancrypto/.artixlinux/pkgbase.yaml
+++ b/system/leancrypto/.artixlinux/pkgbase.yaml
@@ -1,12 +1,5 @@
 ---
 team: system
-pkgbase:
-  name: leancrypto
-  version: 1.3.0-1
-  arch:
-    - x86_64
-  pkgname:
-    - leancrypto
 actions:
   addRepo: system
   removeRepo: system-gremlins
@@ -19,37 +12,49 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
-    version: 1.3.0-1
+    version: 1.4.0-1
     packages:
-      - leancrypto-1.3.0-1-x86_64.pkg.tar.zst
+      - leancrypto-1.4.0-1-x86_64.pkg.tar.zst
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
