--- a/world/akonadi-calendar/.artixlinux/srcinfo.yaml
+++ b/world/akonadi-calendar/.artixlinux/srcinfo.yaml
@@ -1,10 +1,10 @@
 ---
-version: 25.04.1-1
+version: 25.04.1-2
 pkgbase:
   name: akonadi-calendar
   pkgdesc: Akonadi calendar integration
   pkgver: 25.04.1
-  pkgrel: 1
+  pkgrel: 2
   url: https://kontact.kde.org
   arch:
     - x86_64
@@ -20,7 +20,7 @@ pkgbase:
     - akonadi-mime
     - gcc-libs
     - glibc
-    - gpgme
+    - gpgmepp
     - kcalendarcore
     - kcalutils
     - kcodecs
@@ -42,7 +42,7 @@ pkgbase:
     - libakonadi
     - libkleo
     - messagelib
-    - qgpgme-qt6
+    - qgpgme
     - qt6-base
   source:
     - https://download.kde.org/stable/release-service/25.04.1/src/akonadi-calendar-25.04.1.tar.xz
@@ -56,4 +56,4 @@ pkgbase:
     - SKIP
 pkgname:
   - name: akonadi-calendar
-# generated with artixpkg 0.36.1-3-any
+# generated with artixpkg 0.36.3-1-any
