--- a/world/qt5-base/.artixlinux/pkgbase.yaml
+++ b/world/qt5-base/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -29,10 +29,10 @@ repos:
     packages: []
     debug: []
   world:
-    version: 5.15.17+kde+r122-1
+    version: 5.15.17+kde+r123-1
     packages:
-      - qt5-base-5.15.17+kde+r122-1-x86_64.pkg.tar.zst
-      - qt5-xcb-private-headers-5.15.17+kde+r122-1-x86_64.pkg.tar.zst
+      - qt5-base-5.15.17+kde+r123-1-x86_64.pkg.tar.zst
+      - qt5-xcb-private-headers-5.15.17+kde+r123-1-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
