--- a/world/gradle/.artixlinux/pkgbase.yaml
+++ b/world/gradle/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -29,11 +29,11 @@ repos:
     packages: []
     debug: []
   world:
-    version: 8.14.1-1
+    version: 8.14.2-1
     packages:
-      - gradle-8.14.1-1-any.pkg.tar.zst
-      - gradle-doc-8.14.1-1-any.pkg.tar.zst
-      - gradle-src-8.14.1-1-any.pkg.tar.zst
+      - gradle-8.14.2-1-any.pkg.tar.zst
+      - gradle-doc-8.14.2-1-any.pkg.tar.zst
+      - gradle-src-8.14.2-1-any.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
