--- a/world/xdp-tools/.artixlinux/pkgbase.yaml
+++ b/world/xdp-tools/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: xdp-tools
-  version: 1.5.4-1
-  arch:
-    - x86_64
-  pkgname:
-    - xdp-tools
-    - libxdp
 actions:
   addRepo: world
   removeRepo: null
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1.5.4-1
+    version: 1.5.5-1
     packages:
-      - xdp-tools-1.5.4-1-x86_64.pkg.tar.zst
-      - libxdp-1.5.4-1-x86_64.pkg.tar.zst
+      - xdp-tools-1.5.5-1-x86_64.pkg.tar.zst
+      - libxdp-1.5.5-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
