--- a/world/llhttp/.artixlinux/pkgbase.yaml
+++ b/world/llhttp/.artixlinux/pkgbase.yaml
@@ -1,55 +1,60 @@
 ---
 team: world
-pkgbase:
-  name: llhttp
-  version: 9.2.1-2
-  arch:
-    - x86_64
-  pkgname:
-    - llhttp
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 9.2.1-2
+    version: 9.3.0-1
     packages:
-      - llhttp-9.2.1-2-x86_64.pkg.tar.zst
+      - llhttp-9.3.0-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
