--- a/world/llhttp/PKGBUILD
+++ b/world/llhttp/PKGBUILD
@@ -1,11 +1,11 @@
 # Maintainer: Cory Sanin <corysanin@artixlinux.org>
-# Contributor:
+# Contributor: Caleb Maclennan <caleb@alerque.com>
 # Contributor: Marcus Ben Spencer <marcus@marcusspencer.xyz>
 # Contributor: George Rawlinson <grawlinson@archlinux.org>
 
 pkgname=llhttp
-pkgver=9.2.1
-pkgrel=2
+pkgver=9.3.0
+pkgrel=1
 pkgdesc='Port of http_parser to llparse'
 arch=(x86_64)
 url='https://llhttp.org'
@@ -16,7 +16,7 @@ makedepends=(cmake
              npm
              ts-node)
 source=(git+https://github.com/nodejs/llhttp#tag=v$pkgver)
-sha512sums=('34aaa50e3da9f0cc7a98ebbe05ebabb85fc9f1b634c48827cd1f3266b6e71b7b08e25463c9ae80b0bad6fd04508cf10f5e7b4c7b340df9f9e2a6c6c930ccf0e0')
+sha256sums=('e50bb063f12869f5af99afb991bb3cad5fcebb1e28d82be09b6b9616ac894920')
 
 build() {
   cd $pkgname
@@ -36,6 +36,5 @@ build() {
 
 package() {
   DESTDIR="$pkgdir" cmake --install build
-
-  install -vDm644 -t "$pkgdir/usr/share/licenses/$pkgname" $pkgname/LICENSE-MIT
+  install -vDm644 -t "$pkgdir/usr/share/licenses/$pkgname" $pkgname/LICENSE
 }
